--- a/dockerfiles/Dockerfile_github_GA
+++ b/dockerfiles/Dockerfile_github_GA
@@ -15,8 +15,8 @@ RUN /streamline_scripts/install_odbc_drivers.sh
 RUN /streamline_scripts/rstudio_no_login.sh
 
 # need this because gargle caches
-RUN mkdir -p ~/.cache
-RUN chmod 777 ~/.cache
+RUN mkdir -p ~/.cache/gargle
+RUN chmod 777 ~/.cache/gargle
 
 # I don't want warnings to be errors
 ENV R_REMOTES_NO_ERRORS_FROM_WARNINGS=true
