fixing run command because https://stackoverflow.com/questions/28966198/dockerfile-home-is-not-working-with-add-copy-instructions

--- a/dockerfiles/Dockerfile_github_GA
+++ b/dockerfiles/Dockerfile_github_GA
@@ -88,9 +88,9 @@ RUN Rscript -e "remotes::install_local('package', upgrade = FALSE)"
 # COPY service_account.json ~/service_account.json
 # COPY client.json ~/client.json
 
-RUN echo "GAR_CLIENT_JSON=client.json" >> ~/.Renviron
-RUN echo "GAR_AUTH_FILE=service_account.json" >> ~/.Renviron
-RUN echo "GCE_AUTH_FILE=service_account.json" >> ~/.Renviron
+RUN echo "GAR_CLIENT_JSON=client.json" >> .Renviron
+RUN echo "GAR_AUTH_FILE=service_account.json" >> .Renviron
+RUN echo "GCE_AUTH_FILE=service_account.json" >> .Renviron
 
 
 CMD ["/init"]
