need to copy package to /package

--- a/dockerfiles/Dockerfile_github_GA
+++ b/dockerfiles/Dockerfile_github_GA
@@ -15,8 +15,8 @@ ENV R_REMOTES_NO_ERRORS_FROM_WARNINGS=true
 ##########################################################
 
 RUN ls
-# COPY token.rds /token.rds
-# COPY package /package
+COPY token.rds /token.rds
+COPY package /package
 
 
 # SSH AUTH and GITHUB
