--- a/dockerfiles/Dockerfile_packages
+++ b/dockerfiles/Dockerfile_packages
@@ -1,19 +1,20 @@
-FROM gcr.io/streamline-resources/streamline-docker-repo/streamliner
+# syntax=docker/dockerfile:experimental
+FROM us-east4-docker.pkg.dev/streamline-resources/streamline-docker-repo/streamliner
+# See https://stackoverflow.com/questions/18136389/using-ssh-keys-inside-docker-container
+
+COPY check_remotes_version.R /
+COPY install_packages_directory.R /
+COPY packages /packages
 
 # fix due to https://github.com/r-lib/remotes/pull/630
-RUN Rscript /workspace/deploy/check_remotes_version.R
+RUN Rscript /check_remotes_version.R
 
-# Run above instead of 
-# RUN Rscript check_remotes_version.R
-# so you don't need to figure out deploy/subdirectory
-RUN git clone git@github.com:StreamlineDataScience/gcloud
-RUN git clone git@github.com:StreamlineDataScience/metagce
+RUN Rscript /install_packages_directory.R
 
-RUN Rscript -e "remotes::install_git('git@github.com:StreamlineDataScience/gcloud')"
+RUN rm -rf /packages
 
-RUN Rscript -e "remotes::install_git('git@github.com:StreamlineDataScience/metagce')"
-  
-RUN rm -rf ~/.ssh/id_*
-RUN rm -rf /root/.ssh/id_*
+RUN curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
+RUN chmod 700 get_helm.sh
+RUN ./get_helm.sh
 
 CMD ["/init"]
