added in JS for disabling buttons

--- a/dockerfiles/Dockerfile_shinyvm
+++ b/dockerfiles/Dockerfile_shinyvm
@@ -6,7 +6,8 @@ RUN install2.r --error \
     shiny \
     shinydashboard \
     DT \
-    flexdashboard
+    flexdashboard \
+    shinyjs 
 
 RUN Rscript -e "remotes::install_github('muschellij2/googleCloudRunner')"
 RUN Rscript -e "remotes::install_github('muschellij2/googleComputeEngineR')"
