--- a/dockerfiles/Dockerfile_streamliner
+++ b/dockerfiles/Dockerfile_streamliner
@@ -62,6 +62,11 @@ RUN /streamline_scripts/install_gcloud.sh
 RUN /rocker_scripts/install_shiny_server.sh
 EXPOSE 3838
 
+## in UNSTABLE, we will install everything from source by default:
+CRAN=https://cran.r-project.org
+## Add a default CRAN mirror
+echo "options(repos = c(CRAN = '${CRAN}'), download.file.method = 'libcurl')" >> ${R_HOME}/etc/Rprofile.site
+
 CMD ["/init"]
 
 
