--- a/dockerfiles/Dockerfile_renv-base:4.1.2
+++ b/dockerfiles/Dockerfile_renv-base:4.1.2
@@ -11,5 +11,6 @@ RUN /streamline_scripts/install_3rd_party_extensions.sh
 RUN /streamline_scripts/install_texlive.sh
 RUN /streamline_scripts/install_odbc_drivers.sh
 RUN /streamline_scripts/install_gcloud.sh
+RUN install2.r --error renv
 WORKDIR ./
 CMD ["R"]
