--- a/dockerfiles/Dockerfile_renv-package-4.1.1
+++ b/dockerfiles/Dockerfile_renv-package-4.1.1
@@ -3,5 +3,6 @@ LABEL maintainer="Streamline_Data_Science"
 ENV _R_CHECK_CRAN_INCOMING_="false"
 COPY ["package_scripts", "/package_scripts"]
 RUN chmod +x /package_scripts/*
+RUN ["/rocker_scripts/install_python.sh"]
 WORKDIR ./
 CMD ["R"]
