added streamliner too

--- a/dockerfiles/Dockerfile_streamliner
+++ b/dockerfiles/Dockerfile_streamliner
@@ -66,6 +66,12 @@ RUN /rocker_scripts/install_shiny_server.sh
 ## Add a default CRAN mirror
 # RUN echo "options(repos = c(CRAN = '${CRAN}'), download.file.method = 'libcurl')" >> ${R_HOME}/etc/Rprofile.site
 
+RUN /rocker_scripts/install_pandoc.sh
+RUN /rocker_scripts/install_python.sh
+
+# related to https://github.com/rstudio/reticulate/issues/1190
+RUN python -m pip install numpy --force-reinstall --no-binary numpy
+
 EXPOSE 8787
 EXPOSE 3838
 EXPOSE 1410
