--- a/dockerfiles/Dockerfile_renv-package-4.1.2
+++ b/dockerfiles/Dockerfile_renv-package-4.1.2
@@ -4,5 +4,6 @@ ENV _R_CHECK_CRAN_INCOMING_="false"
 COPY ["package_scripts", "/package_scripts"]
 RUN chmod +x /package_scripts/*
 RUN ["/rocker_scripts/install_python.sh"]
+RUN ["python -m pip install numpy --force-reinstall --no-binary numpy"]
 WORKDIR ./
 CMD ["R"]
